--- a/UbiGame_FlappBird/Makefile
+++ b/UbiGame_FlappBird/Makefile
@@ -10,7 +10,7 @@ OBJECTS = $(SOURCES:.cpp=.o)
 CXX = clang++ 
 CXXFLAGS = -std=c++17 -O2 -Wall
 
-INCLUDES = -I$(ROOT)UbiGame -I$(ROOT)UbiGame/Source -I$(ROOT)../SFML-2.5.0/include
+INCLUDES =  -I$(ROOT)Source -I$(ROOT)../SFML-2.5.0/include
 LDFLAGS = -L$(ROOT)../SFML-2.5.0/lib -rpath $(ROOT)../SFML-2.5.0/lib
 
 LIBS = -lsfml-audio -lsfml-graphics -lsfml-system -lsfml-window
