--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -28,12 +28,10 @@ jobs:
   build_windows:
     runs-on: windows-latest
 
-    env:
-      # Configuration type to build.
-      # You can convert this to a build matrix if you need coverage of multiple configuration types.
-      # https://docs.github.com/actions/learn-github-actions/managing-complex-workflows#using-a-build-matrix
-      BUILD_CONFIGURATION: Release
-
+    strategy:
+      matrix:
+        build_configuration: [Debug, Release]
+    
     steps:
     - name: Checkout
       uses: actions/checkout@v2
@@ -47,5 +45,5 @@ jobs:
       
     - name: Build FlappBird
       working-directory: ${{env.bird-directory}}
-      run: msbuild /m /p:Configuration=${{env.BUILD_CONFIGURATION}} UbiGame.sln
+      run: msbuild /m /p:Configuration=${{ matrix.build_configuration }} UbiGame.sln
   
