--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -30,7 +30,7 @@ jobs:
 
     strategy:
       matrix:
-        build_configuration: [Debug, Release]
+        buildconfig: ["Debug", "Release"]
     
     steps:
     - name: Checkout
@@ -45,5 +45,5 @@ jobs:
       
     - name: Build FlappBird
       working-directory: ${{env.bird-directory}}
-      run: msbuild /m /p:Configuration=${{matrix.build_configuration}} UbiGame.sln
+      run: msbuild /m /p:Configuration=${{matrix.buildconfig}} UbiGame.sln
   
