Fixed syntax errors, included user instructions

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,12 @@ UbiGame_FlappBird/tmp
 #Visual Studio Meta data
 UbiGame_Blank/.vs
 UbiGame_FlappBird/.vs
+.vs/HackersNest/v16/.suo 2
+.vs/ProjectSettings 2.json
+.vs/slnx 2.sqlite
+SFML-2.5.0/lib/sfml-audio-d.pdb
+SFML-2.5.0/lib/sfml-audio-d.pdb
+SFML-2.5.0/lib/sfml-audio-s-d.lib
+SFML-2.5.0/lib/sfml-graphics-s-d.lib
+SFML-2.5.0/lib/sfml-network-d.pdb
+SFML-2.5.0/lib/sfml-window-s-d.lib
