Added to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,10 @@ UbiGame_Blank/bin
 UbiGame_Blank/tmp
 UbiGame_FlappBird/bin
 UbiGame_FlappBird/tmp
+TheGhostBlewOutTheLight/bin
+TheGhostBlewOutTheLight/tmp
 
 #Visual Studio Meta data
 UbiGame_Blank/.vs
 UbiGame_FlappBird/.vs
+TheGhostBlewOutTheLight/.vs
