--- a/UbiGame_Blank/UbiGame.vcxproj.filters
+++ b/UbiGame_Blank/UbiGame.vcxproj.filters
@@ -78,6 +78,9 @@
     <ClCompile Include="Source\GameEngine\Grid.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Source\Game\Ball\BallEntity.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\GameEngine\GameEngineMain.h">
@@ -135,6 +138,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Source\GameEngine\Grid.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Game\Ball\BallEntity.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
